<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/multicolour_background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/d_entry"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginBottom="40dp"
        android:background="#6F2013"
        android:text="@string/data_entry"
        android:textAllCaps="false"
        android:textColor="#FCCB01"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/saved_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/saved_data"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_marginBottom="110dp"
        android:background="#6F2013"
        android:text="@string/saved_data"
        android:textAllCaps="false"
        android:textColor="#FCCB01"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:text="@string/info_collector"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:text="@string/no_1"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:text="@string/no_2"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:text="@string/no_3"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>