<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="410sp"
    android:layout_height="100sp">

    <TextView
        android:id="@+id/col_id"
        android:layout_width="100sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:paddingTop="10sp"
        android:text="@string/id"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/col_name"
        android:layout_width="205sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:paddingTop="10sp"
        android:text="@string/name_view"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/col_age"
        android:layout_width="100sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:paddingTop="10sp"
        android:text="@string/age_view"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="italic" />
</LinearLayout>
