<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/multicolour_background"
    tools:context=".DataEntry">

    <EditText
        android:id="@+id/name_entry"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="180dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age_entry"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/enter_age"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_entry" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="349dp"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        android:text="@string/data_entry_tv"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="245dp"
        android:layout_height="86dp"
        android:layout_marginTop="80dp"
        android:text="@string/save_data"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:background="#6F2013"
        android:textColor="#FCCB01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_entry" />
</androidx.constraintlayout.widget.ConstraintLayout>