<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/multicolour_background"
    tools:context=".ViewSavedData">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/data_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading">

        <TextView
            android:id="@+id/col_id"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:text="@string/id"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/col_name"
            android:layout_width="205sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:text="@string/name_view"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/col_age"
            android:layout_width="100sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="10sp"
            android:text="@string/age_view"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty_message"
        android:layout_width="349dp"
        android:layout_height="94dp"
        android:paddingTop="20dp"
        android:text="@string/empty_mssg"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/data_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="20sp"
        android:text="@string/ViewDataHeading"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/data_view"
        android:layout_width="0dp"
        android:layout_height="618dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>